manifests/istio/demo/virtualservice-httpbin-route.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin-route
  namespace: demo
spec:
  hosts:
  - ${DEMO_HOST}
  gateways:
  - demo-gateway
  http:
  - route:
    - destination:
        host: httpbin.demo.svc.cluster.local
        port:
          number: 8000
